2009-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* icons/SplashScreen.png:
	* MonoDevelop.Ide.Gui.Dialogs/SplashScreen.cs: Update splash.

2009-12-11  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.Ide.csproj:
	* MonoDevelop.Ide.addin.xml:
	* icons/tools-external-tools-24.png:
	* icons/tools-external-tools-16.png: Add new icons.

2009-12-11  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Fix jump-to
	  regression.

2009-12-10  Levi Bard  <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* MonoDevelop.Ide.Gui.Pads/ErrorListPad.cs: Allow resorting by
	  severity.

2009-12-09  Michael Hutchinson  <mhutchinson@novell.com>

	* templates/EmptyHTMLFile.xft.xml: Sane casing on HTML tags.

2009-12-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: Use Workbench.Present so
	  that we can special-case for different platforms. Ignore
	  Present on Mac since GTK+ is broken there.

	* MonoDevelop.Ide.Gui/Ide.cs: Use Workbench.Present so that we
	  can special-case for different platforms.

	* MonoDevelop.Ide.Gui/IdeStartup.cs: Use Workbench.Present so
	  that we can special-case for different platforms. Also
	  better logging of crashes.

	* MonoDevelop.Ide.Gui/DocumentSwitcher.cs: Ignore Present on
	  Mac since GTK+ is broken there.

2009-12-04  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Execution/ExecutionModeCommandService.cs:
	  Avoid appending '...' to commands that already end with
	  '...'.

2009-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/IncludeNewFilesDialog.cs: Add
	  missing null check. Fixes bug #560768.

2009-12-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Gui/Workbench.cs: Add some sanity checks for
	  DesktopApplication.

2009-12-03  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: