@@ -1,3 +1,7 @@
+2009-12-11  Michael Hutchinson  <mhutchinson@novell.com>
+
+	* MonoDevelop.Ide.addin.xml: Use some of the new icons.
+
 2009-12-11  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* icons/SplashScreen.png:
